--- a/aes.html
+++ b/aes.html
@@ -1394,7 +1394,6 @@
                 "blanc_classic": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/HyperdimensionNeptunia/blanc_classic/model.json",
                 "blanc_normal": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/HyperdimensionNeptunia/blanc_normal/model.json",
                 "blanc_swimwear": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/HyperdimensionNeptunia/blanc_swimwear/model.json",
-                "histoire": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/HyperdimensionNeptunia/histoire/model.json",
                 "nepgear": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/HyperdimensionNeptunia/nepgear/model.json",
                 "nepgear_extra": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/HyperdimensionNeptunia/nepgear_extra/model.json",
                 "nepgearswim": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/HyperdimensionNeptunia/nepgearswim/model.json",
@@ -1411,20 +1410,6 @@
                 "vert_normal": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/HyperdimensionNeptunia/vert_normal/model.json",
                 "vert_swimwear": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/HyperdimensionNeptunia/vert_swimwear/model.json",
                 "22": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/22/model.json",
-                "22.2017.cba-normal": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/22.2017.cba-normal/22.2017.cba-normal.model.json",
-                "22.2017.newyear": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/22.2017.newyear/22.2017.newyear.model.json",
-                "22.2017.school": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/22.2017.school/22.2017.school.model.json",
-                "22.2017.summer.normal.1": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/22.2017.summer.normal.1/22.2017.summer.normal.1.model.json",
-                "22.2017.summer.normal.2": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/22.2017.summer.normal.2/22.2017.summer.normal.2.model.json",
-                "22.2017.tomo-bukatsu.high": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/22.2017.tomo-bukatsu.high/22.2017.tomo-bukatsu.high.model.json",
-                "22.2017.tomo-bukatsu.low": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/22.2017.tomo-bukatsu.low/22.2017.tomo-bukatsu.low.model.json",
-                "22.2017.valley": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/22.2017.valley/22.2017.valley.model.json",
-                "22.2017.vdays": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/22.2017.vdays/22.2017.vdays.model.json",
-                "22.2018.lover": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/22.2018.lover/22.2018.lover.model.json",
-                "22.2018.spring": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/22.2018.spring/22.2018.spring.model.json",
-                "22.default": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/22.default/22.default.model.json",
-                "22.xmas.1": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/22.xmas.1/22.xmas.1.model.json",
-                "22.xmas.2": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/22.xmas.2/22.xmas.2.model.json",
                 "Bronya": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/Bronya/Bronya.model.json",
                 "Epsilon": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/Epsilon/Epsilon.model.json",
                 "Epsilon2.1": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/Epsilon2.1/Epsilon2.1.model.json",
@@ -1437,12 +1422,12 @@
                 "chino": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/chino/model.json",
                 "chitose": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/chitose/chitose.model.json",
                 "date_16": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/date_16/date_16.model.json",
-                "gf": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/gf/Gantzert_Felixander.model.json",
                 "hallo_16": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/hallo_16/hallo_16.model.json",
                 "haru01": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/haru01/haru01.model.json",
                 "haru02": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/haru02/haru02.model.json",
                 "haruto": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/haruto/haruto.model.json",
                 "hibiki": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/hibiki/hibiki.model.json",
+                "hijiki": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/hijiki/hijiki.model.json",
                 "iio": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/iio/iio.model.json",
                 "index": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/index/index.model.json",
                 "izumi": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/izumi/izumi.model.json",
@@ -1453,13 +1438,13 @@
                 "kesyoban": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/kesyoban/kesyoban.model.json",
                 "koharu": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/koharu/koharu.model.json",
                 "kuroko": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/kuroko/kuroko.model.json",
-                "kurumi": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/kurumi/model.json",
+                "kurumi": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/kurumi/kurumi.model.json",
                 "len": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/len/len.model.json",
                 "len_impact": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/len_impact/len_impact.model.json",
                 "len_space": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/len_space/len_space.model.json",
                 "len_swim": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/len_swim/len_swim.model.json",
                 "madoka": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/madoka/model.json",
-                "makoto": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/makoto0/makoto.model.json",
+                "makoto0": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/makoto0/makoto.model.json",
                 "mikoto": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/mikoto/mikoto.model.json",
                 "miku": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/miku/miku.model.json",
                 "ni-j": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/ni-j/ni-j.model.json",
@@ -1494,67 +1479,74 @@
                 "z16": "https://raw.githubusercontent.com/zenghongtu/live2d-model-assets/master/assets/moc/z16/z16.model.json"
             };
 
-        // 動態生成所有選項（避免 HTML 過長）
-        const select = document.getElementById('modelSelect');
-        Object.keys(modelMap).forEach(name => {
-            const option = document.createElement('option');
-            option.value = name;
-            option.textContent = name;
-            select.appendChild(option);
-        });
-
-        let currentWidget = null;
-
-        function loadModel(modelName) {
-            const modelPath = modelMap[modelName];
-            if (!modelPath) {
-                alert('模型不存在');
-                return;
-            }
-
-            // 銷毀舊實例
-            if (currentWidget && typeof currentWidget.destroy === 'function') {
-                currentWidget.destroy();
-            }
-            // 清除畫布防止殘留
-            document.querySelectorAll('canvas').forEach(canvas => canvas.remove());
-
-            // 初始化新模型
-            currentWidget = L2Dwidget.init({
-                model: {
-                    jsonPath: modelPath
-                },
-                display: {
-                    position: 'right',
-                    width: 200,
-                    height: 400,
-                    hOffset: -20,
-                    vOffset: -100,
-                    superSample: 2
-                },
-                mobile: {
-                    show: true,
-                    scale: 0.5
-                },
-                react: {
-                    opacityDefault: 0.7,
-                    opacityOnHover: 0.9
-                },
-                log: false
+            // 動態生成選單選項
+            const select = document.getElementById('modelSelect');
+            Object.keys(modelMap).forEach(name => {
+                const option = document.createElement('option');
+                option.value = name;
+                option.textContent = name;
+                select.appendChild(option);
             });
 
-            console.log('已切換到模型：' + modelName);
-        }
+            let currentWidget = null;
 
-        // 初始載入預設模型
-        loadModel('ひじき (預設)');
+            function loadModel(modelName) {
+                const modelPath = modelMap[modelName];
+                if (!modelPath) {
+                    alert('該模型路徑不存在');
+                    return;
+                }
 
-        // 綁定切換事件
-        document.getElementById('changeModelBtn').addEventListener('click', () => {
-            const selected = document.getElementById('modelSelect').value;
-            loadModel(selected);
+                // 先銷毀舊的實例（非常重要，避免預設模型或舊模型殘留）
+                if (currentWidget && typeof currentWidget.destroy === 'function') {
+                    currentWidget.destroy();
+                }
+                // 清除畫布元素
+                document.querySelectorAll('canvas, .live2d-container').forEach(el => el.remove());
+
+                // 初始化新模型
+                currentWidget = L2Dwidget.init({
+                    model: {
+                        jsonPath: modelPath
+                    },
+                    display: {
+                        position: 'right',
+                        width: 200,
+                        height: 400,
+                        hOffset: -20,
+                        vOffset: -100,
+                        superSample: 2
+                    },
+                    mobile: {
+                        show: true,
+                        scale: 0.5
+                    },
+                    react: {
+                        opacityDefault: 0.7,
+                        opacityOnHover: 0.9,
+                        opacityInDraggable: 0.4
+                    },
+                    pluginRootPath: 'lib/',
+                    pluginJsPath: 'lib/',
+                    pluginModelPath: 'assets/',
+                    tagMode: false,
+                    debug: false,
+                    log: false
+                });
+
+                console.log('成功切換/載入模型：' + modelName + ' (' + modelPath + ')');
+            }
+
+            // 初始載入預設模型
+            loadModel('ひじき (預設)');
+
+            // 綁定切換按鈕事件
+            document.getElementById('changeModelBtn').addEventListener('click', function () {
+                const selected = document.getElementById('modelSelect').value;
+                loadModel(selected);
+            });
         });
-    });
     </script>
+
 </body>
 </html>
