--- a/aes.html
+++ b/aes.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <!-- Live2D 看板娘 CSS -->
-    <link rel="stylesheet" type="text/css" href="https://live2d.fghrsh.net/assets/1.4.2/waifu.min.css?v=1.4.2"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fghrsh/live2d_api@master/waifu.min.css"/>
 
     <style>
         body {
@@ -281,10 +281,10 @@
     </div>
 
     <!-- Live2D 依赖 -->
-    <script src="https://live2d.fghrsh.net/assets/1.4.2/jquery.min.js"></script>
-    <script src="https://live2d.fghrsh.net/assets/1.4.2/jquery-ui.min.js"></script>
-    <script src="https://live2d.fghrsh.net/assets/1.4.2/waifu-tips.min.js"></script>
-    <script src="https://live2d.fghrsh.net/assets/1.4.2/live2d.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fghrsh/live2d_api@master/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fghrsh/live2d_api@master/jquery-ui.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fghrsh/live2d_api@master/live2d.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fghrsh/live2d_api@master/waifu-tips.min.js"></script>
 
     <!-- Live2D 初始化设置 -->
     <script>
@@ -303,7 +303,7 @@
             waifuDraggable: "axis-x",
             hitokotoAPI: "fghrsh.net"
         };
-        initModel("https://live2d.fghrsh.net/assets/1.4.2/waifu-tips.json");
+        initModel("https://cdn.jsdelivr.net/gh/fghrsh/live2d_api@master/waifu-tips.json");
     </script>
 
     <!-- ======================== 原 AES 加解密完整逻辑 ======================== -->
